2013-03-11  Charlie Zender  <zender@uci.edu>

	* ncecat remove lmt_all structure code from GAG branch

	* ncecat warn when automatically generated GPE paths conflict during GAG

	* Verify ncks dumps many NASA HDF5 and HDF-EOS5 files, though no HDF4 or HDF-EOS2 files

	* Clarify NC_ENOTNC and NC_ENOTBUILT errors

2013-03-10  Pedro Vicente  <pvicente@uci.edu>

	* Regression tests for order coordinates by group depth and "out of scope" coordinate

	* nco_cmp_crd_dpt() Compare coordinate structures by group depth

2013-03-08  Pedro Vicente  <pvicente@uci.edu>

	* Add regression tests for creation of variables with ancestor group dimensions (GPE, non-GPE)

	* nco_bld_var_dmn() Assign variable's dimensions to either coordinates or dimension structures
	Handle "out of scope" cases as non-assigned coordinate

	* Regression test for coordinate "out of scope" (group depth greater than variable that uses coordinate)

2013-03-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomic ignore, --fix_rec_crd
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

	* Implement and test ncflint --fix_rec_crd

2013-03-07  Charlie Zender  <zender@uci.edu>

	* Add hooks for ncflint --fix_rec_crd

2013-03-06  Pedro Vicente  <pvicente@uci.edu>

	* nco_scp_var_crd() Return in scope coordinate for variable

	* nco_bld_var_dmn() Assign variables dimensions to either coordinates or dimension structs

	* nco_get_sls_chr_cnt() Get number of slash characters in a string path

	* nco_get_str_pth_sct() Get full name token structure (path components)

	* Add regression tests for "parallel" scope

2013-03-05  Pedro Vicente  <pvicente@uci.edu>

	* nco_dmn_fll_nm_id() Return unique dimension full name from unique ID

	* nco_dmn_trv_sct() Return unique dimension object from unique ID

2013-03-05  Charlie Zender  <zender@uci.edu>
