@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_netcdf.c,v 1.189 2013-03-11 21:24:08 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_netcdf.c,v 1.190 2013-03-13 22:49:40 pvicente Exp $ */
 
 /* Purpose: NCO wrappers for netCDF C library */
 
@@ -996,6 +996,49 @@ nco_rename_dim(const int nc_id,const int dmn_id,const char * const dmn_nm)
   if(rcd != NC_NOERR) nco_err_exit(rcd,"nco_rename_dim()");
   return rcd;
 }  /* end nco_inq_rename_dim */
+
+int                      
+nco_inq_dimid2(int ncid,const char *dmn_nm_fll,int *dmn_id)            
+{
+  /* 
+  From: "Unidata netCDF Support" <support-netcdf@unidata.ucar.edu>
+  Subject: [netCDF #SHH-257980]: Re: [netcdfgroup] Dimensions IDs
+
+  Same as
+  int nc_inq_dimid2(int ncid, const char *dimname, int *dimidp)
+
+  in  ncdump/utils.c
+
+  Missing functionality that should be in nc_inq_dimid(), to get
+  dimid from a full dimension path name that may include group names 
+  */
+
+  int ret=NC_NOERR;
+
+  /* If '/' doesn't occur in dimname, just return id found by nc_inq_dimid() */
+  const char *sp=strrchr(dmn_nm_fll,'/');
+  if(!sp) {
+    ret=nc_inq_dimid(ncid,dmn_nm_fll,dmn_id);
+  } 
+
+  else {  /* Parse group name out and get dimid using that */
+    size_t grp_nm_lng=sp-dmn_nm_fll;
+    char *grp_nm=(char *)malloc(grp_nm_lng+1);
+    int grp_id;
+    strncpy(grp_nm,dmn_nm_fll,grp_nm_lng);
+    grp_nm[grp_nm_lng]='\0';
+    ret=nc_inq_grp_full_ncid(ncid,grp_nm,&grp_id);
+    if(ret==NC_NOERR){
+      ret=nc_inq_dimid(grp_id,dmn_nm_fll,dmn_id);
+    }
+    free(grp_nm);
+  }	
+
+  return ret;
+}
+
+
+
 /* End Dimension routines */
 
 /* Begin Variable routines (_var) */
